# image-processing

./: .gitignore  CMakeLists.txt  README.md
images/: sample.ppm
src/: cuda_filter.cu  cuda_filter.h  filter.c  filter.h  libppm.c  libppm.h  mosaic.c  mosaic.cpp
